--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,14 @@ dependencies:
   open_filex: ^4.4.0         # "폴더 열기"와 유사한 기능(파일 열기)
   uuid: ^4.4.0
   #네트워크
-  http: ^1.2.1               # Gemini API 호출
+  http: ^1.2.1
   flutter_staggered_grid_view: ^0.7.0
+  google_generative_ai: 0.4.7
 
 
   cupertino_icons: ^1.0.8
   url_launcher: ^6.3.2
+  flutter_markdown: ^0.7.7+1
 
 dev_dependencies:
   flutter_test:
